# -pick-and-place-Gazebo-Ros2-

./: README.md  package.xml  setup.py
config/: colors.yaml
launch/: pick_and_place.launch.py  sim.launch.py
pick_and_place/: object_detector.py  pick_and_place_node.py
worlds/: pick_world.sdf
